--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard-dynamic-subset.css"
     />
-    <!-- <link
+    <link
       rel="preload"
       href="https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff"
       as="font"
@@ -50,7 +50,7 @@
       as="font"
       type="font/woff"
       crossorigin=""
-    /> -->
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
