bugfix : 첫 렌더시에 대나무 숲에서 대화 더보기가 보이지 않는 현상 수정 (#130)

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="밀리콘 팀의 첫 서비스, 위드 페스티벌을 소개합니다."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
